# axion-organoid-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
data/sample/: workflow_a_axion_spikes.csv  workflow_b_events.csv  workflow_c_well_summary.csv  workflow_d_events.csv  workflow_e_channel_summary.csv  workflow_g_events.csv  workflow_h_recording_manifest.csv
docs/: api.md  changelog.md  citation.md  cli.md  index.md  methodology.md
docs/contributing/: release-process.md
docs/tasks/: README.md  codex_task_01_bootstrap.md  codex_task_02_workflow_a_ingestion.md  codex_task_03_workflow_h_qc.md  codex_task_04_workflow_b_bursts.md  codex_task_05_workflow_c_baseline.md  codex_task_06_workflow_d_raster.md  codex_task_07_workflow_e_spatial.md  codex_task_08_workflow_f_group.md  codex_task_09_workflow_g_connectivity.md  codex_task_10_docs_site.md  codex_task_11_ci_release.md
docs/tutorials/: quickstart.md  workflow-a-ingestion.md  workflow-b-bursts.md  workflow-c-baseline.md  workflow-d-raster.md  workflow-e-spatial.md  workflow-f-group.md  workflow-g-connectivity.md  workflow-h-qc.md
scripts/dev/: check_repo_health.sh  regen_cli_docs.py
src/meaorganoid/: __init__.py  _typing.py  errors.py
src/meaorganoid/bursts/: __init__.py  _schema.py  logisi.py  maxinterval.py
src/meaorganoid/cli/: __init__.py
src/meaorganoid/compare/: __init__.py  baseline.py  group.py
src/meaorganoid/connectivity/: __init__.py  adjacency.py  plot.py  sttc.py  threshold.py
src/meaorganoid/io/: __init__.py
src/meaorganoid/metrics/: __init__.py
src/meaorganoid/plot/: __init__.py  condition.py  raster.py  spatial.py
src/meaorganoid/qc/: __init__.py  dashboard.py  flags.py
tests/fixtures/: axion_aliases_spiketime.csv  axion_aliases_timestamp.csv  axion_aliases_underscore.csv  axion_extra_whitespace.csv  axion_minimal.csv  axion_missing_time.csv  axion_with_well.csv  burst_events.csv  connectivity_channel_summary.csv  connectivity_manifest.csv  raster_bursts.csv  recording_manifest_small.csv  well_summary_groups.csv
tests/integration/: test_docs_build.py  test_workflow_a_ingestion.py  test_workflow_b_cli.py  test_workflow_c_cli.py  test_workflow_d_cli.py  test_workflow_e_cli.py  test_workflow_f_cli.py  test_workflow_g_cli.py  test_workflow_h_dashboard.py
tests/unit/: test_adjacency.py  test_bursts_logisi.py  test_bursts_maxinterval.py  test_compare_baseline.py  test_compare_group.py  test_docstrings.py  test_io_aliases.py  test_io_smoke.py  test_plot_connectivity.py  test_plot_group.py  test_plot_raster.py  test_plot_spatial.py  test_probabilistic_threshold.py  test_qc_flags.py  test_sttc.py
